[gd_scene load_steps=8 format=3 uid="uid://bkwstkasudsoi"]

[ext_resource type="Script" path="res://Scenes/Characters/child characters/enemies/turret_enemy.gd" id="1_cf7n0"]
[ext_resource type="Texture2D" uid="uid://bi1oiw0c58cl" path="res://Graphics/icon.svg" id="2_0ufax"]
[ext_resource type="Script" path="res://Scenes/Characters/HPbar.gd" id="2_wo2om"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_8qteg"]
size = Vector2(126, 122)

[sub_resource type="OccluderPolygon2D" id="OccluderPolygon2D_8871c"]
polygon = PackedVector2Array(-53, -63, 53, -63, 59, -58, 63, -53, 64, 50, 60, 59, 52, 64, -52, 64, -61, 58, -64, 49, -64, -52, -59, -60)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ob7cx"]
bg_color = Color(0.552941, 0, 0.0117647, 1)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_kc4xw"]
bg_color = Color(0, 0.878431, 0.117647, 1)
border_color = Color(0, 0.45098, 0.0392157, 1)
border_blend = true
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[node name="TurretEnemy" type="StaticBody2D"]
collision_layer = 2
collision_mask = 47
script = ExtResource("1_cf7n0")

[node name="Sprite2D" type="Sprite2D" parent="."]
modulate = Color(0.921569, 0, 0, 1)
texture = ExtResource("2_0ufax")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_8qteg")

[node name="LightOccluder2D" type="LightOccluder2D" parent="."]
occluder = SubResource("OccluderPolygon2D_8871c")

[node name="HPbar" type="ProgressBar" parent="."]
offset_left = -108.0
offset_top = -120.0
offset_right = 108.0
offset_bottom = -93.0
theme_override_styles/background = SubResource("StyleBoxFlat_ob7cx")
theme_override_styles/fill = SubResource("StyleBoxFlat_kc4xw")
value = 100.0
script = ExtResource("2_wo2om")

[node name="DisappearTimer" type="Timer" parent="HPbar"]
wait_time = 1.5
one_shot = true

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 64
input_pickable = false

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Area2D"]
position = Vector2(4, 53)
polygon = PackedVector2Array(-1, 0, -539, -1, -749, -262, -978, -663, -660, -1132, -67, -169, 60, -169, 668, -1134, 951, -700, 762, -314, 558, -1)

[node name="Reload" type="Timer" parent="."]
wait_time = 0.9
autostart = true

[connection signal="timeout" from="HPbar/DisappearTimer" to="HPbar" method="_on_disappear_timer_timeout" flags=18]
[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_area_2d_body_exited"]
[connection signal="timeout" from="Reload" to="." method="_on_reload_timeout"]
